--- a/FallingWords/Presentation/Game/ChooseLanguage/View/ChooseLanguageViewController.xib
+++ b/FallingWords/Presentation/Game/ChooseLanguage/View/ChooseLanguageViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChooseLanguageViewController" customModule="FallingWords" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="TGf-b5-LnO" id="iK7-h1-8rC"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,9 +18,27 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TGf-b5-LnO">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0wC-BW-A94">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" red="0.13" green="0.17999999999999999" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="TGf-b5-LnO" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Bb8-du-xZZ"/>
+                <constraint firstItem="TGf-b5-LnO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="KFO-WX-IgU"/>
+                <constraint firstItem="TGf-b5-LnO" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="UjQ-TT-ZIC"/>
+                <constraint firstAttribute="bottom" secondItem="TGf-b5-LnO" secondAttribute="bottom" id="wzJ-zL-wJd"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="136.80000000000001" y="152.47376311844079"/>
+            <point key="canvasLocation" x="136.23188405797103" y="152.00892857142856"/>
         </view>
     </objects>
 </document>
